--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
+	<script src="js/javascript.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <h1>Hello world</h1>
     
     <!-- T2 -->
-    <button type="my-button" onclick="console.log('hello world')">my-button</button>
+    <button id="my-button">my-button</button>
     
 </body>
 
