--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <!-- T2 -->
     <button id="my-button">my-button</button>
     
+    <!-- T3 -->
+    <!-- Add  a <ul> tag and a <button> tags 
+    to the body of the document. 
+    The button should have an id of add-data
+    and it should add an <li> element 
+    with arbitrary text inside the <ul> tag. --->
+    <ul id="list">
+        <li> .</li>
+    </ul>
+    
+    <button id="add-data">Add-data</button>
 	
 </body>
 
